# vlm-pddl-manipulation

./: .gitignore  Comandi Anaconda Prompt.md  Comandi Anaconda Prompt.txt  README.md  requirements.txt  setup.py
demos/: domain_updated.pddl  gemini_interactive_control_JSON.py  hybrid_scene_graph_builder.py  list_models.py  main.py  pick_and_hold.py  pick_with_gemini_INNER_MONOLOGUE.py  pick_with_gemini_TEXT.py  pick_with_gemini_VISION.py  pick_with_gemini_VISION_SCENE_GRAPH.py
dummy_tests/: coppeliasim_setup.py  dummyCollisionCheck.py  dummyMotionControl.py  gemini_interactive_control.py  gemini_vision_test.py  get_6d_pose_from_point_cloud.py  get_bbox_from_gemini.py  joint_space_control.py  robot_skills.py  stepSimulation_TEST.py
franka_fr3_moveit_config/config/: custom_fr3_controllers.yaml  custom_fr3_ros_controllers.yaml  custom_sensors_3d.yaml
franka_fr3_moveit_config/launch/: fr3_moveit.launch.py
grasp_test/: export_data_coppelia.py  grasp_logic.py
perception_server/: CMakeLists.txt  package.xml
perception_server/config/: perception_server_params.yaml
perception_server/include/perception_server/: cluster_extraction.h  normals_curvature_and_rsd_estimation.h  object_segmentation.h  plane_segmentation.h
perception_server/launch/: get_scene_objects.launch.py
perception_server/src/: cluster_extraction.cpp  get_scene_objects_server.cpp  normals_curvature_and_rsd_estimation.cpp  object_segmentation copy.cpp  object_segmentation.cpp  plane_segmentation.cpp
perception_server/srv/: GetSceneObjects.srv
real_franka_robot/: package.xml  setup.cfg  setup.py
real_franka_robot/calibration/: camera_transform.py
real_franka_robot/config/: realsense_calib.yaml  realsense_manipulation.yaml
real_franka_robot/launch/: realsense_to_robot_static_transform.py
real_franka_robot/real_franka_robot/: main.py
real_franka_robot/real_franka_robot/vlm_agent/: __init__.py
real_franka_robot/real_franka_robot/vlm_agent/core/: domain.pddl  logger_config.py  prompt_templates.py  task_executor.py  vlm_interface.py
real_franka_robot/real_franka_robot/vlm_agent/implementations/franka/: franka_robot.py
real_franka_robot/real_franka_robot/vlm_agent/implementations/franka/components/: actuation.py  gripper.py  perception.py  planning.py  vision_system.py
real_franka_robot/rviz/: calibration.rviz  moveit.rviz
simulation/scenes/: franka_nudge_test.ttt  gemini_vision_test.ttt  only_franka.ttt  scene_graph_test.ttt  scene_with_fake_franka - Copia (2).ttt  scene_with_fake_franka - Copia.ttt  scene_with_fake_franka.ttt  scene_with_franka.ttt
src/tesi_gemini_robotics/: coppeliasim_setup.py  motion_planning.py  prompt_templates.py  robot_controller.py  robot_execution.py  task_executor.py  utils.py
src/tesi_gemini_robotics/core/: llm_interface.py  logger_config.py  prompt_templates.py  task_executor.py
src/tesi_gemini_robotics/implementations/coppelia/: coppeliasim_robot.py  coppeliasim_setup.py
src/tesi_gemini_robotics/implementations/coppelia/components/: actuation.py  gripper.py  perception.py  planning.py
src/tesi_gemini_robotics/implementations/franka/: franka_robot.py
src/tesi_gemini_robotics/interfaces/: robot_interface.py
src/vlm_agent/: __init__.py
src/vlm_agent/core/: domain.pddl  llm_interface.py  prompt_templates.py  task_executor.py  vlm_interface.py
src/vlm_agent/implementations/coppelia/: coppeliasim_robot.py
src/vlm_agent/implementations/coppelia/components/: gripper.py
